<resources>
    <string name="app_name">Ejemplo de clase</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="introduce">Introduce DNI</string>
    <string name="password">Contraseña</string>
    <string name="introduce_pass">Introduce Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="title_activity_menu">Evaluación de TTA</string>
    <string name="leccion">Lección 1: Introducción a Android</string>
    <string name="nuevotest">NUEVO TEST</string>
    <string name="nuevoejercicio">NUEVO EJERCICIO</string>
    <string name="seguimiento">SEGUIMIENTO</string>
    <string name="title_activity_test">Nuevo Test</string>
    <string name="button_send">ENVIAR</string>
    <string name="enunciado">¿Cuál de las siguientes opciones NO se indica en el fichero de manifiesto de la app?</string>
    <string name="button_help">Ver ayuda</string>
    <string name="title_activity_exercise">Nuevo Ejercicio</string>
    <string name="exercise_enunciado">Explica cómo aplicarías el patrón de diseño MVC en el desarrollo de una app para Android</string>
    <string name="subir_fichero">SUBIR FICHERO</string>
    <string name="sacar_foto">SACAR FOTO</string>
    <string name="grabar_audio">GRABAR AUDIO</string>
    <string name="grabar_video">GRABAR VIDEO</string>
    <string name="textohelp">The manifest.......</string>
    <string name="nohaycamara">No hay cámara, no se pueden hacer fotos</string>
    <string name="nohaymicro">No hay micrófono, no se puede grabar audio</string>
    <string name="nohayapp">No hay aplicaciones</string>
    <string name="enviarelfichero">Enviar el fichero</string>
    <string name="next">NEXT</string>
    <string name="title_activity_model">ModelActivity</string>


</resources>
